@@ -247,7 +247,9 @@ src_libmingwex=\
   secapi/_wctime64_s.c secapi/_ctime64_s.c \
   secapi/asctime_s.c secapi/_wasctime_s.c \
   secapi/_localtime32_s.c secapi/_localtime64_s.c \
-  secapi/_gmtime64_s.c secapi/_gmtime32_s.c
+  secapi/_gmtime64_s.c secapi/_gmtime32_s.c \
+  secapi/_strdate_s.c secapi/_wstrdate_s.c \
+  secapi/_strtime_s.c secapi/_wstrtime_s.c
 
 # these only go into the 64 bit version:
 src_libmingwex64=\
